--- a/META-INF/com/google/android/aroma/idioma/pt.lang
+++ b/META-INF/com/google/android/aroma/idioma/pt.lang
@@ -33,7 +33,7 @@ welcome.title=Bem-vindo
 welcome.text1=Você está prestes a instalar
 welcome.text2=AROMA Installer foi o primeiro e único Touch and Customizable ANDROID ROM Installer no mundo.
 welcome.version=VERSÃO
-welcome.codename=NOMECODICO
+welcome.codename=CODNOME
 welcome.updated=ATUALIZACAO
 welcome.next=Pressione Avançar para continuar a instalação...
 
